---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: N/A
  Changes:
    - Initial Release
    - Includes Copper Tungsten and Tungsten Carbide smelting using Angels Smelting
    - Added Titanium Reinforced Brick
    - Added Adv Gas Refineray MK4
    - Added Agle Farm Mk3 & MK4
    - Added Hydro Plant MK2 & MK3
    - Added Salation Plant MK3
    - Added Ore Washing Plant MK3 & MK4
    - Added Ore Crusher MK4, Floation Cell MK4, Leaching Plant MK4 & Ore Refineray MK3
    - Ported the Warehouse Addon Mod and added MK2-MK4 normal warhouses and tech changes