@@ -2,12 +2,14 @@
 Extra buildings/recipies for angels mods
 Includes Copper Tungsten and Tungsten Carbide smelting using Angels Smelting
 Added Titanium Reinforced Brick
+Added Advanced Chemical Plant MK3
 Added Adv Gas Refineray MK4
 Added Agle Farm Mk3 & MK4
 Added Hydro Plant MK2 & MK3
 Added Salation Plant MK3
 Added Ore Washing Plant MK3 & MK4
 Added Ore Crusher MK4, Floation Cell MK4, Leaching Plant MK4 & Ore Refineray MK3
+Added Crystallizer and Filitration Unit MK3
 Ported the Warehouse Addon Mod and added MK2-MK4 normal warhouses and tech changes
 Credits to Angels for his mods and for letting me have the graphics recoloured
 Zombiee for recolouring the graphics for me
