@@ -1,0 +1,2 @@
+[entity-name]
+advanced-chemical-plant-3=Advanced Chemical Plant MK3
