@@ -4,3 +4,8 @@ hydro-plant-4=Hydro Plant Mk4
 salination-plant-3=Salination Plant Mk3
 washing-plant-3=Washing Plant MK3
 washing-plant-4=Washing Plant MK4
+ore-crusher-4=Ore Crusher Mk4
+ore-floatation-cell-4=Floation Cell Mk4
+ore-leaching-plant-4=Leaching Plant Mk4
+crystallizer-3= Crystallizer Mk 3
+filtration-unit-3=Filtration Unit Mk 3
