@@ -1,13 +1,8 @@
+[item-name]
+titanium-concrete-brick=Titanium Concrete Brick
+
 [fluid-name]
 liquid-molten-copper-tungsten=Molten Copper Tungsten
 
 [technology-name]
 angels-copper-tungsten-smelting=Copper Tungsten Smelting
-
-[item-name]
-titanium-concrete-brick=Titanium Concrete Brick
-
-[entity-name]
-ore-crusher-4=Ore Crusher Mk4
-ore-floatation-cell-4=Floation Cell Mk4
-ore-leaching-plant-4=Leaching Plant Mk4
