@@ -93,6 +93,40 @@ data:extend(
     },
     order = "c-a"
     },
+    {
+      type = "technology",
+      name = "slag-processing-3",
+      icon = "__angelsrefining__/graphics/technology/slag-processing.png",
+    icon_size = 64,
+    prerequisites =
+      {
+    "slag-processing-2",
+      },
+      effects =
+      {
+      {
+          type = "unlock-recipe",
+          recipe = "filtration-unit-3"
+        },
+      {
+          type = "unlock-recipe",
+          recipe = "crystallizer-3"
+        },
+      },
+      unit =
+      {
+        count = 100,
+        ingredients = {
+      {"science-pack-1", 1},
+      {"science-pack-2", 1},
+      {"science-pack-3", 1},
+      {"production-science-pack", 1},
+      {"high-tech-science-pack", 1},
+      },
+        time = 30
+      },
+      order = "a-a-a1"
+      },
 
 }
 )
